add_executable( libs_cstring_test_cstring cstring.cpp )
set_target_properties( libs_cstring_test_cstring PROPERTIES OUTPUT_NAME "cstring" )
add_test( libs_cstring_test_cstring cstring )
add_executable( libs_cstring_test_memchr memchr.cpp )
set_target_properties( libs_cstring_test_memchr PROPERTIES OUTPUT_NAME "memchr" )
add_test( libs_cstring_test_memchr memchr )
add_executable( libs_cstring_test_memcmp memcmp.cpp )
set_target_properties( libs_cstring_test_memcmp PROPERTIES OUTPUT_NAME "memcmp" )
add_test( libs_cstring_test_memcmp memcmp )
add_executable( libs_cstring_test_strchr strchr.cpp )
set_target_properties( libs_cstring_test_strchr PROPERTIES OUTPUT_NAME "strchr" )
add_test( libs_cstring_test_strchr strchr )
add_executable( libs_cstring_test_strcmp strcmp.cpp )
set_target_properties( libs_cstring_test_strcmp PROPERTIES OUTPUT_NAME "strcmp" )
add_test( libs_cstring_test_strcmp strcmp )
add_executable( libs_cstring_test_strcoll strcoll.cpp )
set_target_properties( libs_cstring_test_strcoll PROPERTIES OUTPUT_NAME "strcoll" )
add_test( libs_cstring_test_strcoll strcoll )
add_executable( libs_cstring_test_strcspn strcspn.cpp )
set_target_properties( libs_cstring_test_strcspn PROPERTIES OUTPUT_NAME "strcspn" )
add_test( libs_cstring_test_strcspn strcspn )
add_executable( libs_cstring_test_strlen strlen.cpp )
set_target_properties( libs_cstring_test_strlen PROPERTIES OUTPUT_NAME "strlen" )
add_test( libs_cstring_test_strlen strlen )
add_executable( libs_cstring_test_strncmp strncmp.cpp )
set_target_properties( libs_cstring_test_strncmp PROPERTIES OUTPUT_NAME "strncmp" )
add_test( libs_cstring_test_strncmp strncmp )
add_executable( libs_cstring_test_strpbrk strpbrk.cpp )
set_target_properties( libs_cstring_test_strpbrk PROPERTIES OUTPUT_NAME "strpbrk" )
add_test( libs_cstring_test_strpbrk strpbrk )
add_executable( libs_cstring_test_strrchr strrchr.cpp )
set_target_properties( libs_cstring_test_strrchr PROPERTIES OUTPUT_NAME "strrchr" )
add_test( libs_cstring_test_strrchr strrchr )
add_executable( libs_cstring_test_strspn strspn.cpp )
set_target_properties( libs_cstring_test_strspn PROPERTIES OUTPUT_NAME "strspn" )
add_test( libs_cstring_test_strspn strspn )
add_executable( libs_cstring_test_strstr strstr.cpp )
set_target_properties( libs_cstring_test_strstr PROPERTIES OUTPUT_NAME "strstr" )
add_test( libs_cstring_test_strstr strstr )
