add_executable( libs_weed_example_as_tuple as_tuple.cpp )
set_target_properties( libs_weed_example_as_tuple PROPERTIES OUTPUT_NAME "as_tuple" )
add_executable( libs_weed_example_remove_space remove_space.cpp )
set_target_properties( libs_weed_example_remove_space PROPERTIES OUTPUT_NAME "remove_space" )
